# Adafruit_CircuitPython_BNO055

./: .pre-commit-config.yaml  .pylintrc  .travis.yml  0001-First-part-of-patch.patch  0001-Pylint-and-readthedocs-patch-test.patch  LICENSE  README.rst  adafruit_bno055.py  api.rst  conf.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: bno055_calibrator.py  bno055_compass_mode.py  bno055_i2c-gpio_simpletest.py  bno055_simpletest.py  compasstest.py  test.py
examples/bno055_webgl_demo/: server.py
examples/bno055_webgl_demo/static/: bunny.mtl
examples/bno055_webgl_demo/static/js/: DDSLoader.js  MTLLoader.js.license  OBJLoader.js.license  OBJMTLLoader.js.license  STLLoader.js.license  bootstrap.min.js.license  jquery-2.1.4.min.js.license  three.min.js.license
examples/webgl_demo/: server.py
examples/webgl_demo/templates/: index.html
